# Passer

./: .gitignore  AGENTS.md  README.md
.agent/tests/: check-antigravity-profile.sh
docs/: architecture.md  design_concept.md
passer-app/: .gitignore  DEPLOY_CHECKLIST.md  HISTORY_ANALYSIS.md  package-lock.json  package.json
passer-app/src/: App.css  App.tsx
passer-app/src-tauri/: Cargo.toml  tauri.conf.json
passer-app/src-tauri/capabilities/: default.json
passer-app/src-tauri/icons/: icon.icns
passer-app/src-tauri/src/: clipboard.rs  commands.rs  files.rs  lib.rs  main.rs  mdns.rs  paths.rs  server.rs  tray.rs  types.rs  webdav.rs
passer-app/src/components/: ControlFooter.tsx  DropZone.tsx  GlassCard.tsx  HistoryItemRow.tsx  HistoryWidget.tsx  Layout.tsx  Passboard.tsx  PasserSpace.tsx  PremiumTooltip.tsx  ServerStatusBar.tsx  StatusLine.tsx  TitleBar.tsx
passer-app/src/hooks/: useHistory.ts
passer-website/: eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json
passer-website/src/: App.tsx  i18n.ts  index.css
passer-website/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
passer-website/src/components/layout/: Footer.tsx  Navbar.tsx
passer-website/src/components/sections/: Features.tsx  Hero.tsx  Shortcuts.tsx
passer-website/src/components/ui/: Reveal.tsx  TiltCard.tsx
passer-website/src/locales/: en.json  fr.json
prototype_v0/: requirements.txt  server.py
