[package]
name = "passer-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
arboard = "3.6.1"
local-ip-address = "0.6.7"
tower-http = { version = "0.6.8", features = ["cors"] }
image = "0.25.9"
axum-extra = { version = "0.12.2", features = ["multipart"] }
clipboard-win = "5.4.1"
tempfile = "3.23.0"
zip = "6.0.0"
mdns-sd = "0.11"
dav-server = { version = "0.7" }
rand = "0.8"
base64 = "0.21"
headers = "0.3" 
open = "5.0" # For auth headers handling if needed

